--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
             <button class="gameOverGrid btn">Play</button>
         </section>
         <section id="gameBoard"></section>
+        <section id="arrowKeys">
+            <button id="u" class="arrow up">u</button>
+            <button id="d" class="arrow down">d</button>
+            <button id="l" class="arrow left">l</button>
+            <button id="r" class="arrow right">r</button>
+        </section>
     </div>
 </body>
 <!--
