--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <button id="r" class="arrow right"><i class="fa fa-arrow-right"></i></button>
         </section>
     </div>
+    <footer></footer>
 </body>
 <!--
 Copyright (c) 2022 by Andrew Gablehouse (https://codepen.io/andhouse/pen/wzjKjw)
