--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
     <script defer src="./firebase.js"></script>
-    <script src="./secret.js"></script>
+    <!-- <script src="./secret.js"></script> -->
 </head>
 
 <body>
